--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,11 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 body {
   
-    @apply text-stone-700
+    @apply text-stone-700;
+
+    @apply bg-stone-100
+}
+
+h2{
+    @apply text-lg font-bold
+}
+
+h1{
+@apply text-xl font-bold
 }
 
 @layer base {
